Solucionando vulnerabilidades2